--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <img src="img/pcf.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5 contrast-item-heading">Pivotal<br>Cloud Foundry</h2>
+                  <h3 class="display-5">Pivotal<br>Cloud Foundry</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/installation-nodeintegrations.html#cloud-foundry">For Node.js</a>
@@ -87,7 +87,7 @@
                   <img src="img/microsoftazure.svg" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5 contrast-item-heading">Microsoft<br>Azure</h2>
+                  <h3 class="display-5">Microsoft<br>Azure</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/installation-netusage.html#azure">For .NET</a>
@@ -102,7 +102,7 @@
                   <img src="img/google.png" class="ide-icon-wide" style="width:130px">
                   <br>
                   <br>
-                  <h2 class="display-5 contrast-item-heading">Google<br>App Engine</h2>
+                  <h3 class="display-5">Google<br>App Engine</h3>
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/installation-javaserver.html#google">For Java</a>
                       <br/>
@@ -115,7 +115,7 @@
                   <img src="img/elasticbeanstalk.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5 contrast-item-heading">AWS<br>Elastic Beanstalk</h2>
+                  <h3 class="display-5">AWS<br>Elastic Beanstalk</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/installation-javaserver.html#aws">For Java</a>
@@ -153,7 +153,7 @@
                   <img src="img/teams.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Microsoft Teams</h2>
+                  <h3 class="display-5">Microsoft Teams</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#microsoftteams">Documentation</a>
@@ -167,7 +167,7 @@
                   <img src="img/slack.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Slack</h2>
+                  <h3 class="display-5">Slack</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#slack">Documentation</a>
@@ -206,7 +206,7 @@
                   <img src="img/jenkins.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Jenkins</h2>
+                  <h3 class="display-5">Jenkins</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://plugins.jenkins.io/contrast-continuous-application-security">Jenkins plugin</a>
@@ -222,7 +222,7 @@
                   <img src="img/azuredevops.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Azure DevOps</h2>
+                  <h3 class="display-5">Azure DevOps</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-integration">Azure Marketplace</a>
@@ -239,7 +239,7 @@
                   <img src="img/circleci.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">CircleCI</h2>
+                  <h3 class="display-5">CircleCI</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://circleci.com/orbs/registry/orb/contrastsecurity/verify">Orb Registry</a>
@@ -253,7 +253,7 @@
                   <img src="img/bamboo.png" class="ide-icon-wide" style="width:190px">
                   <br>
                   <br>
-                  <h2 class="display-5">Bamboo</h2>
+                  <h3 class="display-5">Bamboo</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://marketplace.atlassian.com/apps/1219111/contrast-security-for-bamboo?hosting=server&tab=overview">Atlassian Marketplace</a>
@@ -271,7 +271,7 @@
                   <img src="img/maven.png" class="ide-icon-wow" style="width:180px">
                   <br>
                   <br>
-                  <h2 class="display-5">Maven</h2>
+                  <h3 class="display-5">Maven</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://search.maven.org/search?q=a:contrast-maven-plugin">Maven Central</a>
@@ -289,7 +289,7 @@
                   <img src="img/gradle.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Gradle</h2>
+                  <h3 class="display-5">Gradle</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://plugins.gradle.org/plugin/com.contrastsecurity.contrastplugin">gradle.org</a>
@@ -333,7 +333,7 @@
                   <img src="img/github.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">GitHub</h2>
+                  <h3 class="display-5">GitHub</h3>
                   <div class="links">
 
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a>
@@ -347,7 +347,7 @@
                   <img src="img/azureboards.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Azure Boards</h2>
+                  <h3 class="display-5">Azure Boards</h3>
 
                   <div class="links">
 
@@ -362,7 +362,7 @@
                   <img src="img/jira.webp" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Jira</h2>
+                  <h3 class="display-5">Jira</h3>
 
                   <div class="links">
 
@@ -381,7 +381,7 @@
                   <img src="img/ca.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">CA Agile Central</h2>
+                  <h3 class="display-5">CA Agile Central</h3>
                   <div class="links">
 
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central">Documentation</a>
@@ -395,7 +395,7 @@
                   <img src="img/bugzilla.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Bugzilla</h2>
+                  <h3 class="display-5">Bugzilla</h3>
 
                   <div class="links">
 
@@ -410,7 +410,7 @@
                   <img src="img/serena.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Serena</h2>
+                  <h3 class="display-5">Serena</h3>
 
                   <div class="links">
 
@@ -447,22 +447,34 @@
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
-                  <img src="img/visualstudio.png" class="ide-icon-big">
+                  <img src="img/vscode.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Visual Studio</h2>
+                  <h3 class="display-5">Visual Studio Code</h3>
 
                   <div class="links">
-                      <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-vs-ext">Marketplace</a>
+                      <a class="link source-link" href="">Marketplace</a>
                   </div>
               </div>
           </div>
+          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
+            <div class="my-3 py-3">
+                <img src="img/visualstudio.png" class="ide-icon-big">
+                <br>
+                <br>
+                <h3 class="display-5">Visual Studio</h3>
+
+                <div class="links">
+                    <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=ContrastSecurity.contrastsecurity">Marketplace</a>
+                </div>
+            </div>
+        </div>
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/vsmac.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Visual Studio for Mac</h2>
+                  <h3 class="display-5">Visual Studio for Mac</h3>
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-vsmac-plugin-distro/releases">Extension file</a>
                       <br/>
@@ -477,7 +489,7 @@
                   <img src="img/intellij.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">IntelliJ</h2>
+                  <h3 class="display-5">IntelliJ</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://plugins.jetbrains.com/plugin/10335-contrast">Marketplace</a>
@@ -491,7 +503,7 @@
                   <img src="img/eclipse.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Eclipse</h2>
+                  <h3 class="display-5">Eclipse</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://marketplace.eclipse.org/content/contrast-eclipse">Marketplace</a>
@@ -532,7 +544,7 @@
                   <img src="img/pagerduty.jpg" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">PagerDuty</h2>
+                  <h3 class="display-5">PagerDuty</h3>
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#pagerduty">Documentation</a>
                   </div>
@@ -544,7 +556,7 @@
                   <img src="img/victorops.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">VictorOps</h2>
+                  <h3 class="display-5">VictorOps</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#victorops">Documentation</a>
@@ -581,7 +593,7 @@
                   <img src="img/splunk.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Splunk</h2>
+                  <h3 class="display-5">Splunk</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://splunkbase.splunk.com/app/4140/">Marketplace</a>
@@ -596,7 +608,7 @@
                   <img src="img/sumologic.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Sumo Logic</h2>
+                  <h3 class="display-5">Sumo Logic</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastSumoLogicDashboards">Source code</a>
@@ -609,7 +621,7 @@
                   <img src="img/datadog.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">DataDog</h2>
+                  <h3 class="display-5">DataDog</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/ContrastDataDogDashboard">Source code</a>
@@ -647,7 +659,7 @@
                   <img src="img/chrome.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Chrome</h2>
+                  <h3 class="display-5">Chrome</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://chrome.google.com/webstore/detail/contrast/jbhdoimdaneljiehajojfdfggfmdhike">Marketplace</a>
@@ -661,7 +673,7 @@
                   <img src="img/firefox.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Firefox</h2>
+                  <h3 class="display-5">Firefox</h3>
                   <div class="links">
                       <a class="link source-link">[Coming Soon]</a>
                       <br/>
@@ -702,7 +714,7 @@
                   <img src="img/java.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Java SDK</h2>
+                  <h3 class="display-5">Java SDK</h3>
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-java">Source code</a>
                       <br/>
@@ -716,7 +728,7 @@
                   <img src="img/js.webp" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">JavaScript SDK</h2>
+                  <h3 class="display-5">JavaScript SDK</h3>
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-javascript">Source code</a>
                       <br>
@@ -730,7 +742,7 @@
                   <img src="img/python.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Python SDK</h2>
+                  <h3 class="display-5">Python SDK</h3>
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-python">Source code</a>
                       <br/>
@@ -748,7 +760,7 @@
                   <img src="img/dotnet.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">.NET SDK</h2>
+                  <h3 class="display-5">.NET SDK</h3>
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-dotnet">Source code</a>
                       <br/>
@@ -762,7 +774,7 @@
                   <img src="img/webhook.png" class="ide-icon-big">
                   <br>
                   <br>
-                  <h2 class="display-5">Webhooks</h2>
+                  <h3 class="display-5">Webhook</h3>
 
                   <div class="links">
                       <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#webhook">Documentation</a>
@@ -774,7 +786,7 @@
                 <div class="my-3 py-3">
                   <img src="img/contrastCLI-logo.png" class="ide-icon-cli">
                   <br>
-                  <h2 class="display-5">Contrast CLI</h2>
+                  <h3 class="display-5">Contrast CLI</h3>
                   <div class="links">
                       <a class="link source-link" href="https://www.npmjs.com/package/@contrast/contrast-cli">NPM</a><br>
                       <a class="link source-link" href="https://docs.contrastsecurity.com/tools-cli.html#contrast-cli">Documentation</a>
@@ -857,7 +869,7 @@
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/sheepdog.png" class="ide-icon-big">
-                  <h2 class="display-5 contrast-item-heading">Sheepdog<br/><br/></h2>
+                  <h3 class="display-5">Sheepdog</h3>
                   <p class="lead item-lead">Sheepdog is a simple tool to generate normal and attack traffic for OWASP WebGoat</p>
 
                   <div class="links">
@@ -868,7 +880,7 @@
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/nodejs.png" class="ide-icon-wide">
-                  <h2 class="display-5 contrast-item-heading">Node Test Bench Apps</h2>
+                  <h3 class="display-5">Node Test Bench Apps</h3>
                   <p class="lead item-lead">Intentionally vulnerable applications for: Express, Hapi, Koa, Kraken, Fastify and Loopback.
                       <br/>&nbsp;</p>
 
@@ -880,7 +892,7 @@
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/hapi.png" class="ide-icon-big">
-                  <h2 class="display-5 contrast-item-heading">Hapi 16 Test Bench</h2>
+                  <h3 class="display-5">Hapi 16 Test Bench</h3>
                   <p class="lead item-lead">Intentionally vulnerable Hapi 16 application
                       <br/>&nbsp;</p>
 
@@ -892,7 +904,7 @@
           <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
               <div class="my-3 py-3">
                   <img src="img/nodejs.png" class="ide-icon-wide">
-                  <h2 class="display-5 contrast-item-heading">Node Dvnr<br/><br/></h2>
+                  <h3 class="display-5">Node Dvnr</h3>
                   <p class="lead item-lead">Standalone utility for assessing Node app compatibility with Contrast</p>
 
                   <div class="links">
