Fix VS Code marketplace link

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                   <h3 class="display-5">Visual Studio Code</h3>
 
                   <div class="links">
-                      <a class="link source-link" href="">Marketplace</a>
+                      <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=ContrastSecurity.contrastsecurity">Marketplace</a>
                   </div>
               </div>
           </div>
@@ -465,7 +465,7 @@
                 <h3 class="display-5">Visual Studio</h3>
 
                 <div class="links">
-                    <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=ContrastSecurity.contrastsecurity">Marketplace</a>
+                    <a class="link source-link" href="https://marketplace.visualstudio.com/items?itemName=contrast-security.contrast-vs-ext">Marketplace</a>
                 </div>
             </div>
         </div>
