Fix links to new documentation

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <h3 class="display-5">Microsoft Teams</h3>
 
                   <div class="links">
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#microsoftteams">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/microsoft-teams.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -170,7 +170,7 @@
                   <h3 class="display-5">Slack</h3>
 
                   <div class="links">
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#slack">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/slack.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -213,7 +213,7 @@
                       <br/>
                       <a class="link source-link" href="https://github.com/jenkinsci/contrast-continuous-application-security-plugin">Source code</a>
                       <br/>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-ci.html#jenkins">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/jenkins.html">Documentation</a>
                   </div>
               </div>
           </div>
@@ -260,7 +260,7 @@
                       <br/>
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-bamboo-plugin">Source code</a>
                       <br/>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-ci.html#bamboo">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/bamboo.html">Documentation</a>
                   </div>
               </div>
           </div>
@@ -278,7 +278,7 @@
                       <br/>
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-maven-plugin">Source code</a>
                       <br/>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#maven">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/maven.html">Documentation</a>
                       <br/>
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/vulnerable-spring-boot-application">Sample project</a>
                   </div>
@@ -296,7 +296,7 @@
                       <br/>
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-gradle-plugin">Source code</a>
                       <br/>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-build.html#gradleo">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/gradle.html">Documentation</a>
                       <br/>
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/Contrast-Sample-Gradle-Application">Sample project</a>
                   </div>
@@ -336,7 +336,7 @@
                   <h3 class="display-5">GitHub</h3>
                   <div class="links">
 
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#github">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/github.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -351,7 +351,7 @@
 
                   <div class="links">
 
-                      <a class="link source-link" href=" https://docs.contrastsecurity.com/admin-orgintegrations.html#azure-boards">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/azure-boards.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -366,7 +366,7 @@
 
                   <div class="links">
 
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#jira">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/jira.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -384,7 +384,7 @@
                   <h3 class="display-5">CA Agile Central</h3>
                   <div class="links">
 
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#central">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/agile-central.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -399,7 +399,7 @@
 
                   <div class="links">
 
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#bugzilla">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/bugzilla.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -414,7 +414,7 @@
 
                   <div class="links">
 
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#serena">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/serena-business-manager.html">Documentation</a>
                       <br/>
                   </div>
               </div>
@@ -546,7 +546,7 @@
                   <br>
                   <h3 class="display-5">PagerDuty</h3>
                   <div class="links">
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#pagerduty">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/pagerduty.html">Documentation</a>
                   </div>
               </div>
           </div>
@@ -559,7 +559,7 @@
                   <h3 class="display-5">VictorOps</h3>
 
                   <div class="links">
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#victorops">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/victorops.html">Documentation</a>
                   </div>
               </div>
           </div>
@@ -637,60 +637,6 @@
 
   <!--
 
-    Browser Extensions
-
-    -->
-
-  <div class="container">
-      <div class="section-header">
-          <h2 class="section-title">
-            Browser Extensions
-          </h2>
-          <div>
-              <p class="lead">
-                  View vulnerabilities that apply to pages in your application as you browse and develop.
-              </p>
-          </div>
-      </div>
-
-      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-              <div class="my-3 py-3">
-                  <img src="img/chrome.png" class="ide-icon-big">
-                  <br>
-                  <br>
-                  <h3 class="display-5">Chrome</h3>
-
-                  <div class="links">
-                      <a class="link source-link" href="https://chrome.google.com/webstore/detail/contrast/jbhdoimdaneljiehajojfdfggfmdhike">Marketplace</a>
-                      <br/>
-                      <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-chrome-extension">Source code</a>
-                  </div>
-              </div>
-          </div>
-          <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden contrast-box">
-              <div class="my-3 py-3">
-                  <img src="img/firefox.png" class="ide-icon-big">
-                  <br>
-                  <br>
-                  <h3 class="display-5">Firefox</h3>
-                  <div class="links">
-                      <a class="link source-link">[Coming Soon]</a>
-                      <br/>
-                  </div>
-
-                  <div class="links">
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-
-  <br>
-  <br>
-
-  <!--
-
     Extensibility
 
     -->
@@ -718,7 +664,6 @@
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-java">Source code</a>
                       <br/>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-sdkaccess.html#java">Documentation</a>
                   </div>
               </div>
           </div>
@@ -746,7 +691,6 @@
                   <div class="links">
                       <a class="link source-link" href="https://github.com/Contrast-Security-OSS/contrast-sdk-python">Source code</a>
                       <br/>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-sdkaccess.html#python">Documentation</a>
                   </div>
               </div>
           </div>
@@ -777,7 +721,7 @@
                   <h3 class="display-5">Webhook</h3>
 
                   <div class="links">
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/admin-orgintegrations.html#webhook">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/generic-webhooks.html">Documentation</a>
                   </div>
               </div>
           </div>
@@ -789,7 +733,7 @@
                   <h3 class="display-5">Contrast CLI</h3>
                   <div class="links">
                       <a class="link source-link" href="https://www.npmjs.com/package/@contrast/contrast-cli">NPM</a><br>
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/tools-cli.html#contrast-cli">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/contrast-cli.html">Documentation</a>
                   </div>
               </div>
           </div>
