--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
                   <br>
                   <br>
                   <div class="links">
-                      <a class="link source-link" href="https://threadfix.it/scanner/interactive-iast/">Contrast Integration</a>
+                      <a class="link source-link" href="https://threadfix.it/integrations/?_sft_scanner=interactive-iast">Contrast Integration</a>
                       <br/>
                   </div>
               </div>
