Correct link to Jira documentation

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
                   <div class="links">
 
-                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/jira.html">Documentation</a>
+                      <a class="link source-link" href="https://docs.contrastsecurity.com/en/jira-integration.html">Documentation</a>
                       <br/>
                   </div>
               </div>
